--- a/FeatureSelection_and_FeatureEngineering.ipynb
+++ b/FeatureSelection_and_FeatureEngineering.ipynb
@@ -756,6 +756,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3467,6 +3474,27 @@
    ],
    "source": [
     "export_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'encoder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[64], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m X_original \u001b[38;5;241m=\u001b[39m \u001b[43mencoder\u001b[49m\u001b[38;5;241m.\u001b[39minverse_transform(export_df)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'encoder' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "X_original = encoder.inverse_transform(export_df)"
    ]
   },
   {
