--- a/FlateHouseDataCleaning.ipynb
+++ b/FlateHouseDataCleaning.ipynb
@@ -4584,7 +4584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Let's Clean Flant's data"
+    "# Let's Clean Flat's data"
    ]
   },
   {
