--- a/FeatureEngineering.ipynb
+++ b/FeatureEngineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv('gurgaaon_properties_cleaned.csv')"
+    "df=pd.read_csv('/Users/ravina/Desktop/RealEstateProject/Datasets/flat-housemerged.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "4  ['Green Area5 out of 5', 'Construction4 out of...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "(3960, 20)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19983,7 +19983,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('gurgaon_properties_with_new_features.csv',index=False)"
+    "df.to_csv('gurgaon_properties_with_new_features.csv',index=False)\n",
+    "#renamed to data-with-newfeatures.csv"
    ]
   },
   {
