--- a/Outliertreatment_and _missingValue_imputation.ipynb
+++ b/Outliertreatment_and _missingValue_imputation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,21 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_rows', None)\n",
+    "#pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('gurgaon_properties_with_new_features.csv').drop_duplicates()"
+    "df = pd.read_csv('/Users/ravina/Desktop/RealEstateProject/Datasets/data-with-newfeatures.csv').drop_duplicates()"
    ]
   },
   {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "(3678, 23)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10715,7 +10715,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('properties_OutlierTreatment_missing_value_imputation.csv',index=False)"
+    "df.to_csv('properties_OutlierTreatment_missing_value_imputation.csv',index=False)\n",
+    "#renamed to outliers-treated-missing-valued-imputed.csv"
    ]
   },
   {
