--- a/RecommenderSytem.ipynb
+++ b/RecommenderSytem.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"appartments.csv\").drop(22)"
+    "df=pd.read_csv(\"Datasets/appartments.csv\").drop(22)"
    ]
   },
   {
@@ -1280,7 +1280,7 @@
     "import json\n",
     "\n",
     "# Load the dataset\n",
-    "df_appartments = pd.read_csv('appartments.csv').drop(22)\n",
+    "df_appartments = pd.read_csv('Datasets/appartments.csv').drop(22)\n",
     "\n",
     "# Function to parse and extract the required features from the PriceDetails column\n",
     "def refined_parse_modified_v2(detail_str):\n",
